--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,15 +9,17 @@ project( Fungus2D )
 # Tests #
 #########
 
-add_executable( CoreStartTest corestart.cpp )
-target_link_libraries( CoreStartTest Fungus2D ${LIBRARIES} )
+add_executable( PlatformerTest platformer.cpp )
+target_link_libraries( PlatformerTest Fungus2D ${LIBRARIES} )
 
 ######################
 # MSVC configuration #
 ######################
 if(WIN32)
 	if(MSVC)
-	    set_target_properties( CoreStartTest
-	        PROPERTIES WIN32_EXECUTABLE true )
+	    set_target_properties( PlatformerTest PROPERTIES
+								WIN32_EXECUTABLE true
+								LINK_FLAGS_RELEASE -s
+								DEBUG_POSTFIX "_d")
 	endif(MSVC)
 endif(WIN32)
